# rust-ingress

./: README.md  docker-compose.yml  init.sql  load-test.yaml
ingress/: Cargo.toml  Dockerfile
ingress/src/: main.rs
load-test/: config.yaml  output-20k.json  output.json  package-lock.json  package.json  processor.js
worker/: Cargo.toml  Dockerfile
worker/src/: main.rs
