[package]
edition = "2021"
name = "ingress"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5.6"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.0", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
validator = {version = "0.15", features = ["derive"]}
rdkafka = { version = "0.25", features = ["cmake-build"] }
tower-http = { version = "0.3.0", features = ["trace"] }