[package]
edition = "2021"
name = "worker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rdkafka = {version = "0.25", features = ["cmake-build"]}
tokio = {version = "1.0", features = ["full"]}
tokio-postgres = {version="0.7.6", features=["with-serde_json-1"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"